[gd_scene load_steps=3 format=2]

<<<<<<< HEAD
[ext_resource path="res://congratulations/img.png" type="Texture" id=1]
=======
[ext_resource path="res://whale.tres" type="Texture" id=1]
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1
[ext_resource path="res://Game.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="TextoParabens" type="Sprite" parent="."]
<<<<<<< HEAD
position = Vector2( -111.362, 158.842 )
texture = ExtResource( 1 )
offset = Vector2( 623.362, -128.842 )

[node name="Pontuacao" type="Node2D" parent="."]
position = Vector2( 753.869, -2.81951 )
scale = Vector2( 2, 2 )
=======
visible = false
position = Vector2( 512, 30 )
texture = ExtResource( 1 )

[node name="Pontuacao" type="Node2D" parent="."]
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1

[node name="PontuacaoBackground" type="ColorRect" parent="Pontuacao"]
modulate = Color( 1, 1, 1, 0.5 )
anchor_bottom = 60.0
margin_left = 10.0
margin_top = 10.0
margin_right = 130.0
margin_bottom = 50.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoPontuacao" type="RichTextLabel" parent="Pontuacao"]
anchor_left = 0.367
anchor_top = 0.312
anchor_right = 0.367
anchor_bottom = 0.312
margin_left = 15.0
margin_top = 15.0
margin_right = 93.0
margin_bottom = 30.0
text = "Pontuação:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontuacao" type="RichTextLabel" parent="Pontuacao"]
anchor_left = 0.729
anchor_top = 0.75
anchor_right = 0.729
anchor_bottom = 0.75
margin_left = 65.0
margin_top = 30.0
margin_right = 130.0
margin_bottom = 50.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Informacao" type="Node2D" parent="."]

[node name="InformacaoAnimalBackground" type="ColorRect" parent="Informacao"]
<<<<<<< HEAD
visible = false
=======
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 774.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImagemAnimal" type="Sprite" parent="Informacao"]
<<<<<<< HEAD
position = Vector2( 147.13, 301.027 )
scale = Vector2( 0.512316, 0.795512 )

[node name="NomeAnimal" type="RichTextLabel" parent="Informacao"]
visible = false
=======
position = Vector2( 900, 120 )
scale = Vector2( 3, 3 )

[node name="NomeAnimal" type="RichTextLabel" parent="Informacao"]
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1
anchor_left = 0.5
anchor_top = 0.043
anchor_right = 0.5
anchor_bottom = 0.043
margin_left = 874.0
margin_top = 20.0
margin_right = 1009.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescricaoAnimal" type="RichTextLabel" parent="Informacao"]
<<<<<<< HEAD
visible = false
=======
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1
margin_left = 785.0
margin_top = 184.0
margin_right = 1000.0
margin_bottom = 545.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoSom" type="Button" parent="Informacao"]
margin_left = 785.0
margin_top = 560.0
margin_right = 861.0
margin_bottom = 580.0
<<<<<<< HEAD
rect_scale = Vector2( 1.2, 1.2 )
=======
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1
text = "SOM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoPronuncia" type="Button" parent="Informacao"]
margin_left = 910.0
margin_top = 560.0
margin_right = 1001.0
margin_bottom = 580.0
<<<<<<< HEAD
rect_scale = Vector2( 1.2, 1.2 )
=======
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1
text = "PRONUNCIA"
__meta__ = {
"_edit_use_anchors_": false
}
<<<<<<< HEAD

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Informacao"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Informacao"]
[connection signal="pressed" from="Informacao/BotaoSom" to="." method="_on_BotaoSom_pressed"]
[connection signal="pressed" from="Informacao/BotaoPronuncia" to="." method="_on_BotaoPronuncia_pressed"]
=======
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1
